Added swagger doc and generated for course api GetAll, GetByID, CreateCourse, UpdateCourse, DeleteCourse
